--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <br>
     <p id="what">What it does:</p>
     <p id="do">It has some built-in attributes which can change the scrollbar of your website and give it a beautiful
-        look<br>You can use it by adding some attributes in the &#60;body&#62; tag</p>
+        look on Laptops and Desktops<br>You can use it by adding some attributes in the &#60;body&#62; tag</p>
     <br>
     <p id="attr">Attributes:</p>
     <ol>
