--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>ProScroll.js</title>
     <link rel="icon" href="Logo.png">
     <meta charset="UTF-8">
-    <meta name="description" content="The simplest JavaScript library to easily change text colors">
+    <meta name="description" content="The simplest JavaScript library to change the scrollbar of the webpage very easily">
     <meta name="keywords" content="JavaScript, Colors, Easiest">
     <meta name="author" content="Arnav Gumber">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="og:title" property="og:title" content="Rainbow.js - The easiest way to change the color of the text">
+    <meta name="og:title" property="og:title" content="ProScroll.js - The easiest way to change the color of the scrollbar">
     <style>
         #title {
             font-size: 350%;
