--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>ProScroll.js</title>
     <link rel="icon" href="Logo.png">
     <meta charset="UTF-8">
-    <meta name="description" content="The simplest JavaScript library to change the scrollbar of the webpage very easily">
+    <meta name="description"
+        content="The simplest JavaScript library to change the scrollbar of the webpage very easily">
     <meta name="keywords" content="JavaScript, Colors, Easiest">
     <meta name="author" content="Arnav Gumber">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="og:title" property="og:title" content="ProScroll.js - The easiest way to change the color of the scrollbar">
+    <meta name="og:title" property="og:title"
+        content="ProScroll.js - The easiest way to change the color of the scrollbar">
     <style>
         #title {
             font-size: 350%;
@@ -85,7 +87,7 @@
     </style>
 </head>
 
-<body>
+<body pstemp="youtube">
     <img src="Logo.png" alt="Logo" height="70px" width="70px" style="position: absolute;">
     <center>
         <p id="title">ProScroll<i>.js</i></p>
@@ -154,5 +156,6 @@
         }, 10000);
     }
 </script>
+<script src="proscroll.js"></script>
 
 </html>
